--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="#specialized">Custo</a></li>
                     <li><a href="#pillars">Pilares Home Equity</a></li>
                     <li><a href="#about">Quem somos</a></li>
+                    <li><a href="#contact">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -172,7 +173,7 @@
     </section>
 
     <!-- Rodapé -->
-    <footer>
+    <footer id="contact">
         <div class="container footer-content">
             <div class="footer-logo">
                 <img src="bc2_img.webp" alt="Certificação" class="certification-logo">
