--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Imagem Principal -->
     <section class="main-image">
-        <img src="img_principal_city.jpeg" alt="Imagem da Ponte Estaiada">
+        <img src="images/img_principal_city.jpeg" alt="Imagem da Ponte Estaiada">
     </section>
 
     <!-- Seção de Serviços -->
@@ -41,28 +41,28 @@
             <div class="services-container">
                 <div class="service-item">
                     <div class="service-image">
-                        <img src="Design-sem-nome.webp" alt="Ícone Home Equity">
+                        <img src="images/Design-sem-nome.webp" alt="Ícone Home Equity">
                     </div>
                     <h3>Home Equity</h3>
                     <p>Home Equity nada mais é que o Crédito com Garantia de Imóvel, linha de crédito que possibilita a consolidação de dívidas, diminuindo juros e alongando prazo de pagamento frente a outras linhas de crédito.</p>
                 </div>
                 <div class="service-item">
                     <div class="service-image">
-                        <img src="Design-sem-nome-1.webp" alt="Ícone Financiamento">
+                        <img src="images/Design-sem-nome-1.webp" alt="Ícone Financiamento">
                     </div>
                     <h3>Financiamento</h3>
                     <p>Conte com a WeCred para realização do sonho da casa própria, aqui encontramos pra você as melhores condições de financiamento para aquisição do tão sonhado imóvel nas principais instituições financeiras do país.</p>
                 </div>
                 <div class="service-item">
                     <div class="service-image">
-                        <img src="Design-sem-nome-3.webp" alt="Ícone Portabilidade">
+                        <img src="images/Design-sem-nome-3.webp" alt="Ícone Portabilidade">
                     </div>
                     <h3>Portabilidade</h3>
                     <p>Aqui encontramos as melhores condições para portarmos seu crédito imobiliário. Analisaremos o cenário atual e as projeções econômicas para entendermos taxas, prazos e indexadores para seu Financiamento ou Home Equity.</p>
                 </div>
                 <div class="service-item">
                     <div class="service-image">
-                        <img src="Design-sem-nome-2.webp" alt="Ícone Repasse">
+                        <img src="images/Design-sem-nome-2.webp" alt="Ícone Repasse">
                     </div>
                     <h3>Repasse</h3>
                     <p>Serviço voltado para construtoras e incorporadoras de médio e pequeno porte, auxiliando essas empresas na criação de um fluxo eficiente na aprovação dos compradores, acelerando seus recebimentos e a recomposição do seu caixa.</p>
@@ -87,28 +87,28 @@
     <section class="carousel-section">
         <div class="slideshow-container">
             <div class="mySlides fade">
-                <img src="renda.jpeg" style="width:100%">
+                <img src="images/renda.jpeg" style="width:100%">
                 <div class="carousel-text">
                     <h2>RENDA</h2>
                     <p>Capacidade de repagamento da operação</p>
                 </div>
             </div>
             <div class="mySlides fade">
-                <img src="bancabilidade.jpeg" style="width:100%">
+                <img src="images/bancabilidade.jpeg" style="width:100%">
                 <div class="carousel-text">
                     <h2>BANCABILIDADE</h2>
                     <p>Mensuração para mitigação de riscos dos players do segmento</p>
                 </div>
             </div>
             <div class="mySlides fade">
-                <img src="garantia.jpeg" style="width:100%">
+                <img src="images/garantia.jpeg" style="width:100%">
                 <div class="carousel-text">
                     <h2>GARANTIA</h2>
                     <p>Imóvel em nome do proponente principal</p>
                 </div>
             </div>
             <div class="mySlides fade">
-                <img src="home_equity.jpeg" style="width:100%">
+                <img src="images/home_equity.jpeg" style="width:100%">
                 <div class="carousel-text">
                     <h2>PILARES</h2>
                     <p>O que os bancos e fintechs analisam em uma operação de Home Equity?</p>
@@ -126,7 +126,7 @@
             <div class="profile-container">
                 <!-- Primeiro perfil -->
                 <div class="profile">
-                    <img src="wellington_cintra.webp" alt="Wellington Cintra" class="profile-image">
+                    <img src="images/wellington_cintra.webp" alt="Wellington Cintra" class="profile-image">
                     <div class="profile-text">
                         <h3>Wellington Cintra</h3>
                         <p style="font-size: 13px; font-style: italic;">Sócio Diretor</p>
@@ -136,7 +136,7 @@
                 </div>
                 <!-- Segundo perfil -->
                 <div class="profile">
-                    <img src="raphael_boneli.webp" alt="Raphael Boneli" class="profile-image">
+                    <img src="images/raphael_boneli.webp" alt="Raphael Boneli" class="profile-image">
                     <div class="profile-text">
                         <h3>Raphael Boneli</h3>
                         <p style="font-size: 13px; font-style: italic;">Sócio Diretor</p>
@@ -176,7 +176,7 @@
     <footer id="contact">
         <div class="container footer-content">
             <div class="footer-logo">
-                <img src="bc2_img.webp" alt="Certificação" class="certification-logo">
+                <img src="images/bc2_img.webp" alt="Certificação" class="certification-logo">
             </div>
             <div class="footer-contact">
                 <p><strong>Tel:</strong> (11) 95352-8660 ou 94785-3926</p>
@@ -186,20 +186,20 @@
             <div class="social-container">
                 <p>Siga-nos nas Redes Sociais:</p>
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/company/we-cred-assessoria/posts/?feedView=all" target="_blank"><img src="linkedin.webp" alt="LinkedIn"></a>
-                    <a href="https://www.facebook.com/wecred.assessoria" target="_blank"><img src="facebook.webp" alt="Facebook"></a>
-                    <a href="https://www.instagram.com/wecred_assessoria/" target="_blank"><img src="instagram.webp" alt="Instagram"></a>
+                    <a href="https://www.linkedin.com/company/we-cred-assessoria/posts/?feedView=all" target="_blank"><img src="images/linkedin.webp" alt="LinkedIn"></a>
+                    <a href="https://www.facebook.com/wecred.assessoria" target="_blank"><img src="images/facebook.webp" alt="Facebook"></a>
+                    <a href="https://www.instagram.com/wecred_assessoria/" target="_blank"><img src="images/instagram.webp" alt="Instagram"></a>
                 </div>
             </div>
         </div>
     </footer>
 
     <!-- Script do Carrossel -->
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
 
     <!-- WhatsAPP -->
     <a href="https://wa.me/+5511953528660?text=Olá,%20gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20WeCred%20Assessoria." class="whatsapp-float" target="_blank">
-        <img src="whatsapp.png" alt="WhatsApp">
+        <img src="images/whatsapp.png" alt="WhatsApp">
     </a>
 </body>
 </html>
