Adicionando botão do simulador

--- a/index.html
+++ b/index.html
@@ -197,6 +197,11 @@
     <!-- Script do Carrossel -->
     <script src="scripts/script.js"></script>
 
+    <!-- Botão Retangular -->
+    <a href="sistema/index.html" class="floating-button rectangular-button">
+        <img src="images/calculadora.png" alt="Icone Sistema" class="button-icon">
+    </a>
+
     <!-- WhatsAPP -->
     <a href="https://wa.me/+5511953528660?text=Olá,%20gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20WeCred%20Assessoria." class="whatsapp-float" target="_blank">
         <img src="images/whatsapp.png" alt="WhatsApp">
