--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <script src="scripts/script.js"></script>
 
     <!-- Botão Retangular -->
-    <a href="simulador/construcao.html" target="_blank" class="floating-button rectangular-button">
+    <a href="https://simulador.wecredassessoria.com.br" target="_blank" class="floating-button rectangular-button">
         <img src="images/calculadora.png" alt="Icone Sistema" class="button-icon">
     </a>
 
