adicionando atualização consorcio

--- a/simulador/consorcio/meses.html
+++ b/simulador/consorcio/meses.html
@@ -22,18 +22,18 @@
         <!-- Opções de Crédito Consórcio - Meses -->
         <div class="options">
             <!-- Opção 1: 60 Meses -->
-            <a href="financiamento/financiamento.html" class="option">
+            <a href="form.html" class="option">
                 <img src="images/financiamento.png" alt="60 Meses">
                 <p>60 Meses</p>
             </a>
             <!-- Opção 2: 120 Meses -->
-            <a href="financiamento/financiamento.html" class="option">
+            <a href="form.html" class="option">
                 <img src="images/home_equity.png" alt="120 Meses">
                 <p>120 Meses</p>
             </a>
 
             <!-- Opção 3: 180 Meses -->
-            <a href="financiamento/financiamento.html" class="option">
+            <a href="form.html" class="option">
                 <img src="images/consorcio.png" alt="180 Meses">
                 <p>180 Meses</p>
             </a>
