--- a/simulador/consorcio/form.html
+++ b/simulador/consorcio/form.html
@@ -22,7 +22,7 @@
     <main>
         <h1>Consórcio</h1>
         <p>Quais os Valores da Operação?</p>
-        <form action="dados.html" method="post" class="styled-form">
+        <form action="./../dados/dados.html" method="post" class="styled-form">
             <!-- Campo Valor da Carta -->
             <div class="form-group">
                 <label for="valor-carta">Valor da Carta</label>
