--- a/simulador/consorcio/meses.html
+++ b/simulador/consorcio/meses.html
@@ -22,20 +22,20 @@
         <!-- Opções de Crédito Consórcio - Meses -->
         <div class="options">
             <!-- Opção 1: 60 Meses -->
-            <a href="form.html" class="option">
-                <img src="images/financiamento.png" alt="60 Meses">
-                <p>60 Meses</p>
-            </a>
+            <a href="form.html" class="option_meses">
+                <p> <span style="font-family: 'Candara', serif; font-size: 60px; color: #363636; font-weight: bold;">60</span> </p>
+                <p> <span style="font-family: 'Times New Roman', serif; font-size: 25px; color: #363636; font-weight: bold;">Meses</span> </p>
+            </a> 
             <!-- Opção 2: 120 Meses -->
-            <a href="form.html" class="option">
-                <img src="images/home_equity.png" alt="120 Meses">
-                <p>120 Meses</p>
+            <a href="form.html" class="option_meses">
+                <p> <span style="font-family: 'Candara', serif; font-size: 60px; color: #363636; font-weight: bold;">120</span> </p>
+                <p> <span style="font-family: 'Times New Roman', serif; font-size: 25px; color: #363636; font-weight: bold;">Meses</span> </p>
             </a>
 
             <!-- Opção 3: 180 Meses -->
-            <a href="form.html" class="option">
-                <img src="images/consorcio.png" alt="180 Meses">
-                <p>180 Meses</p>
+            <a href="form.html" class="option_meses">
+                <p> <span style="font-family: 'Candara', serif; font-size: 60px; color: #363636; font-weight: bold;">180</span> </p>
+                <p> <span style="font-family: 'Times New Roman', serif; font-size: 25px; color: #363636; font-weight: bold;">Meses</span> </p>
             </a>
         </div>
     </main>
