--- a/simulador/consorcio/tipo.html
+++ b/simulador/consorcio/tipo.html
@@ -23,19 +23,19 @@
         <div class="options">
             <!-- Opção 1: Imobiliário -->
             <a href="./../consorcio/meses.html" class="option">
-                <img src="images/financiamento.png" alt="Imobiliário">
+                <img src="./../images/casa.png" alt="Imobiliário">
                 <p>Imobiliário</p>
             </a>
 
             <!-- Opção 2: Automotivo -->
             <a href="./../consorcio/meses.html" class="option">
-                <img src="images/home_equity.png" alt="Automotivo">
+                <img src="./../images/carro.png" alt="Automotivo">
                 <p>Automotivo</p>
             </a>
 
             <!-- Opção 3: Outros -->
             <a href="./../consorcio/meses.html" class="option">
-                <img src="images/consorcio.png" alt="Outros">
+                <img src="./../images/outros.png" alt="Outros">
                 <p>Outros</p>
             </a>
         </div>
