--- a/simulador/home_equity/home_equity.html
+++ b/simulador/home_equity/home_equity.html
@@ -23,25 +23,25 @@
         <div class="options">
             <!-- Opção 1: Casa -->
             <div class="option">
-                <img src="images/financiamento.png" alt="Casa">
+                <img src="./../images/casa.png" alt="Casa">
                 <p>Casa</p>
             </div>
 
             <!-- Opção 2: Apartamento -->
             <div class="option">
-                <img src="images/home_equity.png" alt="Apartamento">
+                <img src="./../images/predio.png" alt="Apartamento">
                 <p>Apartamento</p>
             </div>
 
             <!-- Opção 3: Sala Comercial -->
             <div class="option">
-                <img src="images/consorcio.png" alt="Sala Comercial">
+                <img src="./../images/comercial.png" alt="Sala Comercial">
                 <p>Sala Comercial</p>
             </div>
 
             <!-- Opção 4: Outros -->
             <div class="option">
-                <img src="images/consorcio.png" alt="Outros">
+                <img src="./../images/outros.png" alt="Outros">
                 <p>Outros</p>
             </div>
         </div>
