--- a/simulador/financiamento/financiamento.html
+++ b/simulador/financiamento/financiamento.html
@@ -22,22 +22,22 @@
         <!-- Opções de Crédito Comprar Imóvel -->
         <div class="options">
             <!-- Opção 1: Imediatamente -->
-            <div class="option" title="Já comprei e preciso aprovar o financiamento agora">
-                <img src="images/financiamento.png" alt="Imediatamente">
+            <a href="./../financiamento/tipo_imovel.html" class="option" title="Já comprei e preciso aprovar o financiamento agora">
+                <img src="./../images/imediata.png" alt="Imediatamente">
                 <p>Imediatamente</p>
-            </div>
+            </a>
 
             <!-- Opção 2: Até 3 Meses -->
-            <div class="option">
-                <img src="images/home_equity.png" alt="Até 3 Meses">
+            <a href="./../financiamento/tipo_imovel.html" class="option">
+                <img src="./../images/3meses.png" alt="Até 3 Meses">
                 <p>Até 3 Meses</p>
-            </div>
+            </a>
 
             <!-- Opção 3: Acima de 3 Meses -->
-            <div class="option">
+            <a href="./../financiamento/tipo_imovel.html" class="option">
                 <img src="images/consorcio.png" alt="Acima de 3 Meses">
                 <p>Acima de 3 Meses</p>
-            </div>
+            </a>
         </div>
     </main>
 
