adicionando botão e todas as telas restantes do Home e Financiamento

--- a/simulador/home_equity/home_equity.html
+++ b/simulador/home_equity/home_equity.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de Empréstimo</title>
     <link rel="stylesheet" href="./../styles.css">
+    <link rel="stylesheet" href="./../home_equity/btn.css">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -22,27 +23,34 @@
         <!-- Opções de Crédito Home Equity -->
         <div class="options">
             <!-- Opção 1: Casa -->
-            <div class="option">
+            <a href="./../home_equity/objetivo.html" class="option">
                 <img src="./../images/casa.png" alt="Casa">
                 <p>Casa</p>
-            </div>
+            </a>
 
             <!-- Opção 2: Apartamento -->
-            <div class="option">
+            <a href="./../home_equity/objetivo.html" class="option">
                 <img src="./../images/predio.png" alt="Apartamento">
                 <p>Apartamento</p>
-            </div>
+            </a>
 
             <!-- Opção 3: Sala Comercial -->
-            <div class="option">
+            <a href="./../home_equity/objetivo.html" class="option">
                 <img src="./../images/comercial.png" alt="Sala Comercial">
                 <p>Sala Comercial</p>
-            </div>
+            </a>
 
             <!-- Opção 4: Outros -->
-            <div class="option">
+            <a href="./../home_equity/objetivo.html" class="option">
                 <img src="./../images/outros.png" alt="Outros">
                 <p>Outros</p>
+            </a>
+
+            <!-- Botão -->
+           <div class="form-buttons"></div>
+           <a href="./../simulador.html">
+               <button type="button" class="btn btn-secondary">Voltar</button>
+           </a>
             </div>
         </div>
     </main>
