--- a/simulador/home_equity/meses.html
+++ b/simulador/home_equity/meses.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de Empréstimo</title>
     <link rel="stylesheet" href="./../styles.css">
-    <link rel="stylesheet" href="./../consorcio/btn.css">
+    <link rel="stylesheet" href="./../home_equity/btn.css">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -17,8 +17,8 @@
 
     <!-- Conteúdo Principal -->
     <main>
-        <h1>Consórcio</h1>
-        <p>Expectativa de Contemplação?</p>
+        <h1>Home Equity</h1>
+        <p>Qual prazo você prefere?</p>
         
         <!-- Opções de Crédito Consórcio - Meses -->
         <div class="options">
@@ -39,12 +39,18 @@
                 <p> <span style="font-family: 'Times New Roman', serif; font-size: 25px; color: #363636; font-weight: bold;">Meses</span> </p>
             </a>
 
+            <!-- Opção 3: 240 Meses -->
+            <a href="form.html" class="option_meses">
+                <p> <span style="font-family: 'Candara', serif; font-size: 60px; color: #363636; font-weight: bold;">240</span> </p>
+                <p> <span style="font-family: 'Times New Roman', serif; font-size: 25px; color: #363636; font-weight: bold;">Meses</span> </p>
+            </a>
+
             <!-- Botão -->
-           <div class="form-buttons"></div>
-                <a href="./../consorcio/tipo.html">
+            <div class="form-buttons"></div>
+            <a href="./../home_equity/objetivo.html">
                 <button type="button" class="btn btn-secondary">Voltar</button>
-           </a>
-       </div> 
+            </a>
+            </div>
         </div>
     </main>
 
