--- a/simulador/consorcio/tipo.html
+++ b/simulador/consorcio/tipo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de Empréstimo</title>
     <link rel="stylesheet" href="./../styles.css">
+    <link rel="stylesheet" href="./../consorcio/btn.css">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -38,6 +39,13 @@
                 <img src="./../images/outros.png" alt="Outros">
                 <p>Outros</p>
             </a>
+
+            <!-- Botão -->
+           <div class="form-buttons"></div>
+               <a href="./../simulador.html">
+                   <button type="button" class="btn btn-secondary">Voltar</button>
+               </a>
+           </div> 
         </div>
     </main>
 
