--- a/simulador/financiamento/tipo_imovel.html
+++ b/simulador/financiamento/tipo_imovel.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de Empréstimo</title>
     <link rel="stylesheet" href="./../styles.css">
+    <link rel="stylesheet" href="./../financiamento/btn.css">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -22,28 +23,36 @@
         <!-- Opções de Financiamento -->
         <div class="options">
             <!-- Opção 1: Casa -->
-            <div class="option">
+            <a href="./../financiamento/meses.html" class="option">
                 <img src="./../images/casa.png" alt="Casa">
                 <p>Casa</p>
-            </div>
+            </a>
 
             <!-- Opção 2: Apartamento -->
-            <div class="option">
+            <a href="./../financiamento/meses.html" class="option">
                 <img src="./../images/predio.png" alt="Apartamento">
                 <p>Apartamento</p>
-            </div>
+            </a>
 
             <!-- Opção 3: Sala Comercial -->
-            <div class="option">
+            <a href="./../financiamento/meses.html" class="option">
                 <img src="./../images/comercial.png" alt="Sala Comercial">
                 <p>Sala Comercial</p>
-            </div>
+            </a>
 
             <!-- Opção 4: Outros -->
-            <div class="option">
+            <a href="./../financiamento/meses.html" class="option">
                 <img src="./../images/outros.png" alt="Outros">
                 <p>Outros</p>
+            </a>
+        
+        <!-- Botões -->
+        <div class="form-buttons">
+            <a href="./../financiamento/financiamento.html">
+                <button type="button" class="btn btn-secondary">Voltar</button>
+            </a>
             </div>
+
         </div>
     </main>
 
