alterações nos botôes

--- a/simulador/financiamento/meses.html
+++ b/simulador/financiamento/meses.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de Empréstimo</title>
     <link rel="stylesheet" href="./../styles.css">
-    <link rel="stylesheet" href="./../financiamento/btn.css">
+    <link rel="stylesheet" href="./../btn.css">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -49,15 +49,16 @@
             <a href="form.html" class="option_meses">
                 <p> <span style="font-family: 'Candara', serif; font-size: 60px; color: #363636; font-weight: bold;">420</span> </p>
                 <p> <span style="font-family: 'Times New Roman', serif; font-size: 25px; color: #363636; font-weight: bold;">Meses</span> </p>
-            </a>
-
-            <!-- Botão -->
-            <div class="form-buttons"></div>
-                <a href="./../financiamento/tipo_imovel.html">
-                    <button type="button" class="btn btn-secondary">Voltar</button>
-                </a>
-            </div>    
+            </a>   
         </div>
+
+        <!-- Botão -->
+        <div class="form-buttons"></div>
+            <a href="./../financiamento/tipo_imovel.html">
+                <button type="button" class="btn btn-secondary">Voltar</button>
+            </a>
+        </div> 
+
     </main>
 
     <script src="script.js"></script>
