--- a/simulador/financiamento/tipo_imovel.html
+++ b/simulador/financiamento/tipo_imovel.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de Empréstimo</title>
     <link rel="stylesheet" href="./../styles.css">
-    <link rel="stylesheet" href="./../financiamento/btn.css">
+    <link rel="stylesheet" href="./../btn.css">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -45,15 +45,15 @@
                 <img src="./../images/outros.png" alt="Outros">
                 <p>Outros</p>
             </a>
-        
+        </div>
+
         <!-- Botões -->
         <div class="form-buttons">
             <a href="./../financiamento/financiamento.html">
                 <button type="button" class="btn btn-secondary">Voltar</button>
             </a>
-            </div>
-
         </div>
+
     </main>
 
     <script src="script.js"></script>
