--- a/simulador/home_equity/averbado.html
+++ b/simulador/home_equity/averbado.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de Empréstimo</title>
     <link rel="stylesheet" href="./../styles.css">
-    <link rel="stylesheet" href="./../home_equity/btn.css">
+    <link rel="stylesheet" href="./../btn.css">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -33,13 +33,13 @@
                 <img src="./../images/nao.png" alt="Não">
                 <p>Não</p>
             </a>
+        </div>
 
-            <!-- Botão -->
-           <div class="form-buttons"></div>
-           <a href="./../home_equity/form.html">
-               <button type="button" class="btn btn-secondary">Voltar</button>
-           </a>
-            </div>
+        <!-- Botão -->
+        <div class="form-buttons"></div>
+            <a href="./../home_equity/form.html">
+                <button type="button" class="btn btn-secondary">Voltar</button>
+            </a>
         </div>
     </main>
 
