--- a/simulador/home_equity/meses.html
+++ b/simulador/home_equity/meses.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de Empréstimo</title>
     <link rel="stylesheet" href="./../styles.css">
-    <link rel="stylesheet" href="./../home_equity/btn.css">
+    <link rel="stylesheet" href="./../btn.css">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -44,13 +44,13 @@
                 <p> <span style="font-family: 'Candara', serif; font-size: 60px; color: #363636; font-weight: bold;">240</span> </p>
                 <p> <span style="font-family: 'Times New Roman', serif; font-size: 25px; color: #363636; font-weight: bold;">Meses</span> </p>
             </a>
+        </div>
 
-            <!-- Botão -->
-            <div class="form-buttons"></div>
+        <!-- Botão -->
+        <div class="form-buttons"></div>
             <a href="./../home_equity/objetivo.html">
                 <button type="button" class="btn btn-secondary">Voltar</button>
             </a>
-            </div>
         </div>
     </main>
 
