--- a/simulador/consorcio/form.html
+++ b/simulador/consorcio/form.html
@@ -6,7 +6,7 @@
     <title>Simulador de Empréstimo</title>
     <link rel="stylesheet" href="./../styles.css">
     <link rel="stylesheet" href="form.css">
-    <link rel="stylesheet" href="btn.css">
+    <link rel="stylesheet" href="./../btn.css">
     <!-- Adiciona Cleave.js via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cleave.js/1.6.0/cleave.min.js"></script>
 </head>
@@ -42,7 +42,7 @@
                 </select>
             </div>
             <!-- Botões -->
-            <div class="form-buttons">
+            <div class="form-buttons-form">
                 <a href="meses.html">
                     <button type="button" class="btn btn-secondary">Voltar</button>
                 </a>
