--- a/simulador/consorcio/tipo.html
+++ b/simulador/consorcio/tipo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de Empréstimo</title>
     <link rel="stylesheet" href="./../styles.css">
-    <link rel="stylesheet" href="./../consorcio/btn.css">
+    <link rel="stylesheet" href="./../btn.css">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -39,14 +39,15 @@
                 <img src="./../images/outros.png" alt="Outros">
                 <p>Outros</p>
             </a>
-
-            <!-- Botão -->
-           <div class="form-buttons"></div>
-               <a href="./../simulador.html">
-                   <button type="button" class="btn btn-secondary">Voltar</button>
-               </a>
-           </div> 
         </div>
+
+        <!-- Botão -->
+        <div class="form-buttons"></div>
+            <a href="./../simulador.html">
+                <button type="button" class="btn btn-secondary">Voltar</button>
+            </a>
+        </div> 
+
     </main>
 
     <script src="script.js"></script>
