--- a/simulador/financiamento/financiamento.html
+++ b/simulador/financiamento/financiamento.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de Empréstimo</title>
     <link rel="stylesheet" href="./../styles.css">
-    <link rel="stylesheet" href="./../financiamento/btn.css">
+    <link rel="stylesheet" href="./../btn.css">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -39,6 +39,7 @@
                 <img src="./../images/3mais.png" alt="Acima de 3 Meses">
                 <p>Acima de 3 Meses</p>
             </a>
+        </div>
 
          <!-- Botões -->
          <div class="form-buttons">
@@ -46,7 +47,7 @@
                 <button type="button" class="btn btn-secondary">Voltar</button>
             </a>
             </div>
-        </div>
+        
     </main>
 
     <script src="script.js"></script>
