--- a/simulador/financiamento/negociacao.html
+++ b/simulador/financiamento/negociacao.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de Empréstimo</title>
     <link rel="stylesheet" href="./../styles.css">
-    <link rel="stylesheet" href="btn.css">
+    <link rel="stylesheet" href="./../btn.css">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -33,15 +33,15 @@
                 <img src="./../images/casa-de-busca.png" alt="estou procurando um imovel">
                 <p>Estou procurando um imóvel</p>
             </a>
+        </div>
 
-         <!-- Botão -->
+        <!-- Botão -->
         <div class="form-buttons"></div>
-         <a href="./../financiamento/form.html">
-             <button type="button" class="btn btn-secondary">Voltar</button>
-         </a>
+            <a href="./../financiamento/form.html">
+                <button type="button" class="btn btn-secondary">Voltar</button>
+            </a>
         </div> 
 
-        </div>
     </main>
 
     <script src="script.js"></script>
