--- a/simulador/home_equity/objetivo.html
+++ b/simulador/home_equity/objetivo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de Empréstimo</title>
     <link rel="stylesheet" href="./../styles.css">
-    <link rel="stylesheet" href="./../home_equity/btn.css">
+    <link rel="stylesheet" href="./../btn.css">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -45,14 +45,15 @@
                 <img src="./../images/outros.png" alt="Outros">
                 <p>Outros</p>
             </a>
+        </div>
 
-            <!-- Botão -->
-            <div class="form-buttons"></div>
+        <!-- Botão -->
+        <div class="form-buttons"></div>
             <a href="./../home_equity/home_equity.html">
                 <button type="button" class="btn btn-secondary">Voltar</button>
             </a>
-            </div>
         </div>
+
     </main>
 
     <script src="script.js"></script>
