--- a/simulador/consorcio/tipo.html
+++ b/simulador/consorcio/tipo.html
@@ -23,19 +23,19 @@
         <!-- Opções de Crédito Consórcio -->
         <div class="options">
             <!-- Opção 1: Imobiliário -->
-            <a href="./../consorcio/meses.html" class="option">
+            <a href="./../consorcio/meses.html" class="option" onclick="capturarEscolha('Consórcio Imobiliário')">
                 <img src="./../images/casa.png" alt="Imobiliário">
                 <p>Imobiliário</p>
             </a>
 
             <!-- Opção 2: Automotivo -->
-            <a href="./../consorcio/meses.html" class="option">
+            <a href="./../consorcio/meses.html" class="option" onclick="capturarEscolha('Consórcio Automotivo')">
                 <img src="./../images/carro.png" alt="Automotivo">
                 <p>Automotivo</p>
             </a>
 
             <!-- Opção 3: Outros -->
-            <a href="./../consorcio/meses.html" class="option">
+            <a href="./../consorcio/meses.html" class="option" onclick="capturarEscolha('Consórcio Outros')">
                 <img src="./../images/outros.png" alt="Outros">
                 <p>Outros</p>
             </a>
@@ -49,6 +49,20 @@
         </div> 
 
     </main>
+
+    <script>
+        // Função para capturar as escolhas feitas nesta página
+        function capturarEscolha(opcao) {
+            // Recupera as escolhas atuais do sessionStorage
+            let escolhas = JSON.parse(sessionStorage.getItem('escolhas')) || [];
+
+            // Adiciona a nova escolha
+            escolhas.push(opcao);
+
+            // Salva novamente no sessionStorage
+            sessionStorage.setItem('escolhas', JSON.stringify(escolhas));
+        }
+    </script>
 
     <script src="script.js"></script>
 </body>
