Formulario completo e enviando "Financiamento"

--- a/simulador/financiamento/financiamento.html
+++ b/simulador/financiamento/financiamento.html
@@ -23,19 +23,19 @@
         <!-- Opções de Crédito Comprar Imóvel -->
         <div class="options">
             <!-- Opção 1: Imediatamente -->
-            <a href="./../financiamento/tipo_imovel.html" class="option" title="Já comprei e preciso aprovar o financiamento agora">
+            <a href="./../financiamento/tipo_imovel.html" class="option" title="Já comprei e preciso aprovar o financiamento agora" onclick="capturarEscolha('Imediatamente')">
                 <img src="./../images/imediata.png" alt="Imediatamente">
                 <p>Imediatamente</p>
             </a>
 
             <!-- Opção 2: Até 3 Meses -->
-            <a href="./../financiamento/tipo_imovel.html" class="option">
+            <a href="./../financiamento/tipo_imovel.html" class="option" onclick="capturarEscolha('Até 3 Meses')">
                 <img src="./../images/3meses.png" alt="Até 3 Meses">
                 <p>Até 3 Meses</p>
             </a>
 
             <!-- Opção 3: Acima de 3 Meses -->
-            <a href="./../financiamento/tipo_imovel.html" class="option">
+            <a href="./../financiamento/tipo_imovel.html" class="option" onclick="capturarEscolha('Acima de 3 Meses')">
                 <img src="./../images/3mais.png" alt="Acima de 3 Meses">
                 <p>Acima de 3 Meses</p>
             </a>
@@ -49,6 +49,20 @@
             </div>
         
     </main>
+
+    <script>
+        // Função para capturar as escolhas feitas nesta página
+        function capturarEscolha(opcao) {
+            // Recupera as escolhas atuais do sessionStorage
+            let escolhas = JSON.parse(sessionStorage.getItem('escolhas')) || [];
+
+            // Adiciona a nova escolha
+            escolhas.push(opcao);
+
+            // Salva novamente no sessionStorage
+            sessionStorage.setItem('escolhas', JSON.stringify(escolhas));
+        }
+    </script>
 
     <script src="script.js"></script>
 </body>
