Formulario completo home-equity

--- a/simulador/dados/success.html
+++ b/simulador/dados/success.html
@@ -61,7 +61,7 @@
 
         <div class="button-group">
             <a href="https://www.wecredassessoria.com.br/">Voltar para o Site</a>
-            <a href="simulador.html">Realizar Nova Simulação</a>
+            <a href="./../simulador.html">Realizar Nova Simulação</a>
         </div>
     </div>
 </body>
