botão voltar da pagina de dados

--- a/simulador/financiamento/form.html
+++ b/simulador/financiamento/form.html
@@ -25,7 +25,7 @@
         <form action="./../financiamento/negociacao.html" method="post" class="styled-form">
             <!-- Campo Valor da Imovel -->
             <div class="form-group">
-                <label for="valor-imovel">Valor do Imóvel?</label>
+                <label for="valor-imovel">Valor do Imóvel</label>
                 <input type="text" id="valor-imovel" name="valor-imovel" placeholder="Digite o valor do imóvel" required>
             </div>
             <!-- Campo Valor de Emprestimo -->
