--- a/simulador/dados/dados.html
+++ b/simulador/dados/dados.html
@@ -60,6 +60,8 @@
                 <input type="text" id="numero" name="numero" placeholder="Número" required>
             </div>
             <button type="submit">Enviar</button>
+            <button type="button" class="btn-back" onclick="history.back()">Voltar</button>
+        </div> 
         </form>
     </main>
 
