--- a/simulador/dados/success.html
+++ b/simulador/dados/success.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Envio Bem-Sucedido</title>
+    <title>Simulador WeCred</title>
     <link rel="stylesheet" href="./../styles.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="./../../favicon_io/favicon-32x32.png">
     <style>
         body {
             display: flex;
