--- a/simulador/financiamento/financiamento.html
+++ b/simulador/financiamento/financiamento.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador de Empréstimo</title>
+    <title>Simulador WeCred</title>
     <link rel="stylesheet" href="./../styles.css">
     <link rel="stylesheet" href="./../btn.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="./../../favicon_io/favicon-32x32.png">
 </head>
 <body>
     <!-- Cabeçalho -->
