--- a/simulador/financiamento/form.html
+++ b/simulador/financiamento/form.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador de Empréstimo</title>
+    <title>Simulador WeCred</title>
     <link rel="stylesheet" href="./../styles.css">
     <link rel="stylesheet" href="./../financiamento/form.css">
     <link rel="stylesheet" href="./../btn.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="./../../favicon_io/favicon-32x32.png">
     <!-- Adiciona Cleave.js via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cleave.js/1.6.0/cleave.min.js"></script>
 </head>
