Ajuste do p do dados e css do botão voltar

--- a/simulador/dados/dados.html
+++ b/simulador/dados/dados.html
@@ -18,7 +18,7 @@
 
     <!-- Formulário -->
     <main>
-        <p>Agora precisamos dos seus dados.</p>
+        <p id="p-dados">Agora precisamos dos seus dados.</p>
         <form id="meu-formulario">
             <div class="form-group">
                 <label for="nome-completo">Nome completo</label>
