Ajustes para hospedagem

--- a/simulador/consorcio/form.html
+++ b/simulador/consorcio/form.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./../styles.css">
     <link rel="stylesheet" href="form.css">
     <link rel="stylesheet" href="./../btn.css">
-    <link rel="icon" type="image/png" sizes="16x16" href="./../../favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-32x32.png">
     <!-- Adiciona Cleave.js via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cleave.js/1.6.0/cleave.min.js"></script>
 </head>
@@ -23,7 +23,7 @@
     <main>
         <h1>Consórcio</h1>
         <p>Quais os Valores da Operação?</p>
-        <form action="./../dados/dados.html" method="post" class="styled-form">
+        <form action="./../dados/dados.html" class="styled-form">
             <!-- Campo Valor da Carta -->
             <div class="form-group">
                 <label for="valor-carta">Valor da Carta</label>
