--- a/simulador/financiamento/tipo_imovel.html
+++ b/simulador/financiamento/tipo_imovel.html
@@ -6,7 +6,7 @@
     <title>Simulador WeCred</title>
     <link rel="stylesheet" href="./../styles.css">
     <link rel="stylesheet" href="./../btn.css">
-    <link rel="icon" type="image/png" sizes="16x16" href="./../../favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-32x32.png">
 </head>
 <body>
     <!-- Cabeçalho -->
