--- a/simulador/home_equity/resp_nao.html
+++ b/simulador/home_equity/resp_nao.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./../styles.css">
     <link rel="stylesheet" href="./../home_equity/form.css">
     <link rel="stylesheet" href="./../btn.css">
-    <link rel="icon" type="image/png" sizes="16x16" href="./../../favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-32x32.png">
     <!-- Adiciona Cleave.js via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cleave.js/1.6.0/cleave.min.js"></script>
 </head>
