--- a/simulador/simulador.html
+++ b/simulador/simulador.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador WeCred</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" sizes="16x16" href="./../favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-32x32.png">
 </head>
 <body>
     <!-- Cabeçalho -->
