--- a/simulador/home_equity/resp_nao.html
+++ b/simulador/home_equity/resp_nao.html
@@ -23,7 +23,7 @@
     <main>
         <h1>Home Equity</h1>
         <p>O Imóvel está Financiado ou Quitado?</p>
-        <form action="./../dados/dados.html" method="post" class="styled-form">
+        <form action="./../dados/dados.html" class="styled-form">
             <!-- Campo Valor Aproximado -->
             <div class="form-group">
                 <label for="valor-aberto">Qual o valor do financiamento em aberto?</label>
