Alterando paragrafo "O Imóvel está com a Construção Averbada?"

--- a/simulador/home_equity/averbado.html
+++ b/simulador/home_equity/averbado.html
@@ -19,7 +19,7 @@
     <!-- Conteúdo Principal -->
     <main>
         <h1>Home Equity</h1>
-        <p>O Imóvel está Averbado?</p>
+        <p>O Imóvel está com a Construção Averbada?</p>
         
         <!-- Opções de Crédito Home Equity -->
         <div class="options">
