alterando apontamento so simulador

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <script src="scripts/script.js"></script>
 
     <!-- Botão Retangular -->
-    <a href="file:///C:/Users/Antonio%20Junior/Desktop/site_wecred/wecred/simulador/simulador.html" target="_blank" class="floating-button rectangular-button">
+    <a href="simulador/index.html" target="_blank" class="floating-button rectangular-button">
         <img src="images/calculadora.png" alt="Icone Sistema" class="button-icon">
     </a>
 
